spotbugs remediation (#324)
Signed-off-by: Anders Swanson <anders.swanson@oracle.com>